タスクを分離

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,12 @@ list(APPEND CMAKE_PREFIX_PATH ../../libtorch)
 find_package(Torch REQUIRED)
 
 
-add_executable(MemoryModuleTest main.cpp
-                                differential_neural_computer.cpp
-                                lstm.cpp
+add_executable(MemoryModuleTest
+        main.cpp
+        differential_neural_computer.cpp
+        lstm.cpp
+        echo_task.cpp
+        tree_task.cpp
         )
 
 target_link_libraries(MemoryModuleTest  "${TORCH_LIBRARIES}")
